crates/service/tests/references/snapshots/features__references__ty__cont_def_ident_idx.snap
---
source: crates/service/tests/references/ty.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 8
      },
      "end": {
        "line": 4,
        "character": 11
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 14
      },
      "end": {
        "line": 6,
        "character": 17
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 15
      },
      "end": {
        "line": 7,
        "character": 18
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 19
      },
      "end": {
        "line": 7,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 8,
        "character": 12
      },
      "end": {
        "line": 8,
        "character": 15
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 9,
        "character": 18
      },
      "end": {
        "line": 9,
        "character": 21
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 10,
        "character": 22
      },
      "end": {
        "line": 10,
        "character": 25
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 11,
        "character": 12
      },
      "end": {
        "line": 11,
        "character": 15
      }
    }
  }
]
