crates/service/tests/references/snapshots/features__references__ty__func_type_ident_idx.snap
---
source: crates/service/tests/references/ty.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 10
      },
      "end": {
        "line": 2,
        "character": 15
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 16
      },
      "end": {
        "line": 3,
        "character": 17
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 16
      },
      "end": {
        "line": 4,
        "character": 21
      }
    }
  }
]
