crates/service/tests/references/snapshots/features__references__ty__struct_access_ident_idx.snap
---
source: crates/service/tests/references/ty.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 10
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 23
      },
      "end": {
        "line": 5,
        "character": 25
      }
    }
  }
]
